fixed display issue in dark mode minor formatting changes

--- a/blogs/style/common_styles_dark.css
+++ b/blogs/style/common_styles_dark.css
@@ -22,6 +22,12 @@ div {
 	margin-right: auto;
 }
 
+@media(max-width: 1000px) {
+	div {
+		zoom: 90%;
+	}
+}
+
 img {
 	background-color: #fff;
 	display: block;
